# -letsplot-ggprism

./: .gitignore  404.html  README.md  generate_examples.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: examples.md  index.md  palettes.md  scales.md  themes.md
examples/: index.html
palettes/: index.html
scales/: index.html
search/: search_index.json
src/letsplot_ggprism/: __init__.py  palettes.py  scales.py  theme.py
tests/: test_prism.py
themes/: index.html
