[project]
name = "letsplot-ggprism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xpf", email = "hilbet@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    "lets-plot>=4.0.0"
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]
